[gd_scene load_steps=8 format=3 uid="uid://csyxhppia4iay"]

[ext_resource type="Script" path="res://scripts/ui/pause_popup.gd" id="1_25o7d"]
[ext_resource type="Theme" uid="uid://d04xevp1fvtso" path="res://assets/ui/button_theme.tres" id="1_h5nxq"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_qby5g"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_pog8e"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_13jfh"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ryo84"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_f7gya"]

[node name="PausePopup" type="Window"]
process_mode = 2
size = Vector2i(1920, 1080)
exclusive = true
unresizable = true
borderless = true
transparent = true
popup_window = true
script = ExtResource("1_25o7d")

[node name="ColorRect" type="ColorRect" parent="."]
offset_right = 1920.0
offset_bottom = 1080.0
color = Color(0.4, 0.223529, 0.192157, 0.0784314)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
offset_right = 1920.0
offset_bottom = 1080.0
theme_override_constants/separation = 62
alignment = 1

[node name="Resume" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme = ExtResource("1_h5nxq")
theme_type_variation = &"FlatButton"
theme_override_styles/normal = SubResource("StyleBoxFlat_qby5g")
theme_override_styles/hover = SubResource("StyleBoxFlat_pog8e")
theme_override_styles/pressed = SubResource("StyleBoxFlat_13jfh")
theme_override_styles/disabled = SubResource("StyleBoxFlat_ryo84")
theme_override_styles/focus = SubResource("StyleBoxEmpty_f7gya")
text = "RESUME"
flat = true

[node name="Settings" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme = ExtResource("1_h5nxq")
theme_type_variation = &"FlatButton"
theme_override_styles/normal = SubResource("StyleBoxFlat_qby5g")
theme_override_styles/hover = SubResource("StyleBoxFlat_pog8e")
theme_override_styles/pressed = SubResource("StyleBoxFlat_13jfh")
theme_override_styles/disabled = SubResource("StyleBoxFlat_ryo84")
theme_override_styles/focus = SubResource("StyleBoxEmpty_f7gya")
disabled = true
text = "SETTINGS"
flat = true

[node name="StartMenu" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme = ExtResource("1_h5nxq")
theme_type_variation = &"FlatButton"
theme_override_styles/normal = SubResource("StyleBoxFlat_qby5g")
theme_override_styles/hover = SubResource("StyleBoxFlat_pog8e")
theme_override_styles/pressed = SubResource("StyleBoxFlat_13jfh")
theme_override_styles/disabled = SubResource("StyleBoxFlat_ryo84")
theme_override_styles/focus = SubResource("StyleBoxEmpty_f7gya")
disabled = true
text = "START MENU"
flat = true

[node name="Exit" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme = ExtResource("1_h5nxq")
theme_type_variation = &"FlatButton"
theme_override_styles/normal = SubResource("StyleBoxFlat_qby5g")
theme_override_styles/hover = SubResource("StyleBoxFlat_pog8e")
theme_override_styles/pressed = SubResource("StyleBoxFlat_13jfh")
theme_override_styles/disabled = SubResource("StyleBoxFlat_ryo84")
theme_override_styles/focus = SubResource("StyleBoxEmpty_f7gya")
text = "EXIT"
flat = true

[connection signal="pressed" from="VBoxContainer/Resume" to="." method="_on_resume_pressed"]
[connection signal="pressed" from="VBoxContainer/Settings" to="." method="_on_settings_pressed"]
[connection signal="pressed" from="VBoxContainer/StartMenu" to="." method="_on_start_menu_pressed"]
[connection signal="pressed" from="VBoxContainer/Exit" to="." method="_on_exit_pressed"]
